// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option go_package = "hello.com/api/article";

package article;

// The article service definition.
service Article {
  // Create a article
  rpc CreateArticle (CreateArticleRequest) returns (ArticleReply) {}
}

// The request message to create a article
message CreateArticleRequest {
  string title = 1;
  string content = 2;
}

// The response message containing the article
message ArticleReply {
    int32 id = 1;
    string title = 2;
    string content = 3;
}